--- a/CSS/index.css
+++ b/CSS/index.css
@@ -16,37 +16,83 @@ a{
     font-family: "Inter", sans-serif;
     font-weight: 500;
     text-decoration: none;
-    margin-right: 20px;
+    margin-right: 50px;
 }
 
-a::before{
-    content: "";
-    background-color: #00FF4D;
-    width: 10px;
-    height: 10px;
-    margin: 10px;
-}
-
-a:hover{
-    font-style: italic;
-    text-decoration: underline;
-}
-
-#button-dowload{
-    background-color: #00FF4D;
+.button{
+    background-color: white;
     display: inline-block;
     height: 50px;
     padding: 10px;
     line-height: 50px;
-    box-shadow: 5px 5px 0px black;
+    box-shadow: 2px 2px 2px 2px black;
+    border: 1px solid black;
     margin: 0px;
 }
 
-#button-dowload:hover {
-    background-color: #02c93e;
-    color: white;
+.button:hover {
+    color: #000000;
 }
 
-body{
-    background-color: black;
+.box{
+    width: 1300px;
+    height: 1200px;
+    background: rgb(255, 255, 255);
+    position: absolute;
+    z-index: 1;
+    top: 200px;
+    left: 300px;
+}
+
+.foto{
+    display: inline-block;
+    position: absolute;
+    z-index: 2;
+    top: 300px;
+    left: 1100px;
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+}
+
+.container{
+    position: absolute;
+    z-index: 0;
+}
+
+.buttonAzSk{
+    background-color: #1D4962;
+    display: inline-block;
+    height: 50px;
+    padding: 10px;
+    line-height: 50px;
+    box-shadow: 2px 2px 2px 2px black;
+    border: 1px solid black;
+    margin: 0px;
+    position: absolute;
+    z-index: 2;
+    top: 800px;
+    left: 450px;
+    width: 130px;
+}
+
+.buttonAzCl{
+    background-color: #5A90B2;
+    display: inline-block;
+    height: 50px;
+    padding: 10px;
+    line-height: 50px;
+    box-shadow: 2px 2px 2px 2px black;
+    border: 1px solid black;
+    margin: 0px;
+    position: absolute;
+    z-index: 2;
+    top: 800px;
+    left: 700px;
+    width: 150px;
+}
+
+.logo{
+    height: 60px;
+    width: 60px;
 }
