--- a/CSS/components/title.css
+++ b/CSS/components/title.css
@@ -1,11 +1,8 @@
 h1{
+    font-family: "Inter", sans-serif;
     display: inline-block;
-    position: absolute;
-    z-index: 2;
     top: 300px;
     left: 450px;
-    font-family: "Inter", sans-serif;
     font-weight: 500;
-    text-decoration: none;
-    font-size: 80px;
+    font-size: 80px
 }
