--- a/CSS/components/subtitle.css
+++ b/CSS/components/subtitle.css
@@ -1,8 +1,6 @@
-h2{
-    font-family: "Inter", sans-serif;
+.subtitle{
+   
     display: inline-block;
-    top: 360px;
-    left: 450px;
     font-weight: 500;
-    font-size: 80px
+    font-size: 50px
 }
