--- a/CSS/components/button.css
+++ b/CSS/components/button.css
@@ -7,15 +7,12 @@
     box-shadow: 5px 5px black;
     text-decoration: none;
     transition: transform 100ms cubic-bezier(.45,.97,.68,2.48);
-    font-size: 20px
+    font-size: 20px;
 }
 
 .button:hover{
     transform: scale(0.95);
 }
-
-
-
 
 .buttonAzSk{
     background-color: #1D4962;
@@ -27,5 +24,13 @@
     border: 1px solid black;
     margin: 0px;
     width: 130px;
-    color: #FFF;
+    font-size: 20px;
+    color: #000;
+    text-decoration: none;
+    transition: transform 100ms cubic-bezier(.45,.97,.68,2.48);
+    top: 1000px;
+}
+
+.buttonAzSk:hover{
+    transform: scale(0.95);
 }
