--- a/CSS/components/action.css
+++ b/CSS/components/action.css
@@ -5,7 +5,7 @@
     text-decoration: none;
     margin-right: 50px;
     font-weight: 650;
-    font-size: 20px
+    font-size: 20px;
 }
 
 .action::before{
