--- a/CSS/components/title.css
+++ b/CSS/components/title.css
@@ -1,5 +1,10 @@
 .title{
+    color: #000;
     display: inline-block;
     font-weight: 500;
     font-size: 50px
+}
+
+.title._second{
+    color: #fff;
 }
