--- a/CSS/components/main-title.css
+++ b/CSS/components/main-title.css
@@ -1,10 +1,10 @@
-.title{
+.main-title{
     color: #000;
-    display: inline-block;
     font-weight: 500;
     font-size: 50px
 }
 
-.title._second{
+.main-title._second{
     color: #fff;
+    text-align: center;
 }
