--- a/CSS/components/skills-dev.css
+++ b/CSS/components/skills-dev.css
@@ -2,17 +2,20 @@
     display: flex;
     font-size: 25px;
     color: #fff;
+
+    align-items: center;
 }
 
-.skills-dev .html-icon{
-    height: 100px;
-    width: 100px;
-
+.skills-dev .icon{
     margin-right: 25px;
 }
 
-.skills-dev .html-progtitle{
+.skills-dev .progtitle{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+.skills-dev .title{
+    margin-bottom: 15px;
 }
